# sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt  sentinel.py  vision.md
.devcontainer/: devcontainer.json
config/: mailboxes.example.yaml
src/: cli.py  config.py  database.py  main.py  monitor.py
src/classifier/: email_classifier.py
src/email/: email_client_base.py  email_client_factory.py  imap_client.py  mail_config.py  msgraph_client.py
src/email/gmail/: auth.py  client.py  models.py
src/notify/: email_notifier.py  sms_email_notifier.py  sms_notifier.py  telegram_email_notifier.py  telegram_notifier.py
src/sentinel/: cli.py  config.py  database.py  logging_config.py  main.py  monitor.py  telegram_bot.py  user_settings.py
src/sentinel/classifier/: __init__.py  email_classifier.py
src/sentinel/email/: email_client_base.py  email_client_factory.py  mail_config.py  models.py  msgraph_client.py
src/sentinel/notify/: email_notifier.py  email_sender.py  notifier.py  sms_email_notifier.py  sms_notifier.py  telegram_email_notifier.py  telegram_notifier.py
src/sentinel/web/: app.py  imap_probe.py
src/sentinel_app/: cli.py  main.py
src/sentinel_app/web/: app.py  imap_probe.py
src/sentinel_core/: config.py  database.py  logging_config.py  monitor.py  telegram_bot.py  time_utils.py  user_settings.py
src/sentinel_core/classifier/: __init__.py  email_classifier.py  item_classifier.py
src/sentinel_core/notify/: email_notifier.py  email_sender.py  item_notifier.py  (+5 more)
src/sentinel_hosted/: __init__.py  cli.py  config.py  database.py  live_bus.py  monitor.py  telegram_bot.py  user_settings.py  worker.py
src/sentinel_lib/: __init__.py  logging_config.py
src/sentinel_local/: __init__.py  cli.py  config.py  database.py  dev_firehose.py  live_bus.py  monitor.py  scorer.py  telegram_bot.py
tools/: compare_encoders.py  embedder.py  label.py  predict.py  train_classifier.py
tools/sources/: README.md  canonicalize.py  client.py  db.py  discover_sitemaps.py  mediacloud_sync.py  schema.sql
(+88 files in other folders)
