[project]
name = "email-sentinel"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "google-auth-oauthlib==1.0.0",
    "google-auth-httplib2==0.1.0",
    "google-api-python-client==2.88.0",
    "pydantic>=2.0.0",
    "openai>=1.70.0",
    "requests==2.31.0",
    "twilio",
    "msgraph-sdk",
    "azure-identity",
    "flask>=3.0.0",
    "resend>=2.0.0",
    "authlib>=1.3.0",
    "feedparser>=6.0.11",
    "aiohttp>=3.10",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
    "sentence-transformers>=5.4.1",
]

[project.scripts]
sentinel = "sentinel_local.cli:main"
sentinel-hosted = "sentinel_hosted.cli:main"
sentinel-hosted-web = "sentinel_hosted.web.app:main"
sentinel-hosted-worker = "sentinel_hosted.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/sentinel_hosted",
    "src/sentinel_lib",
    "src/sentinel_local",
]
